[package]
name = "translucent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum web framework and related
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
hyper = { version = "1.6.0", features = ["full"] }

# HTTP server and client
hyper-tls = "0.6"
http = "0.2"
tokio = { version = "1.44", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_qs = "0.12"

# CLI and configuration
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"

# Utility libraries
regex = "1.11"
uuid = { version = "1.16", features = ["v4"] }
num_cpus = "1.16"
rand = "0.8"
hyper-util = { version = "0.1.10", features = ["full"] }
http-body-util = "0.1.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.19"
pretty_assertions = "1.4"

[features]
default = []
distributed = [] # Add dependencies for distributed mode when needed

[[bin]]
name = "translucent"
path = "src/main.rs"

[lib]
name = "api_simulator"
path = "src/lib.rs"
